--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -5,7 +5,7 @@
     margin: 0px;
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: x-large;
     text-align-last: right;
     display: flex;
     justify-content: center;
