--- a/src/components/Calculator/calculator.css
+++ b/src/components/Calculator/calculator.css
@@ -5,8 +5,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    width: 30%;
-    height: 50%;
+    width: 30vw;
+    height: 27vw;
     background-color: #ececec;
     box-shadow: 0px 0px 30px #afafaf;
 }
