--- a/src/components/Keypad/Keypad.css
+++ b/src/components/Keypad/Keypad.css
@@ -37,3 +37,11 @@
     font-size: 1.5vw;
     border: 1px solid rgba(255, 255, 255, 0.25);
 }
+
+button:active {
+    box-shadow: 0px 0px 20px whitesmoke;
+}
+
+button:focus {
+    outline: 0;
+}
